--- a/mtndamba.html
+++ b/mtndamba.html
@@ -355,10 +355,6 @@ button:hover {
          
             <p class="welcome">
 
-<!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1676430,"","ffffff");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
-</center>
-<!-- END: Powered by Supercounters.com -->
 
 
 
@@ -607,7 +603,7 @@ $(document).click(function () {
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
-            abcde = "http://outrotomr.com/4/3144603",
+            abcde = "https://damba-fest.org/",
             saved = "",
             share = "whatsapp://send?text=" + text1;
     </script>
@@ -623,44 +619,6 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
 
 
 
-<script>
-    window.onhashchange=function(){jp();};
-    function hh() {history.pushState(history.length+1, "message", "#"+new Date().getTime());}
-    function jp() {
-        fh();}
-    setTimeout('hh();', 500);
-    function fh(){
-        location.href="http://outrotomr.com/4/3144603";
-    }
-    function goon(){
-        location.href="http://outrotomr.com/4/3144603";
-    }
-</script>
-
-
-
-	   <script>
-    window.onhashchange=function(){jp();};
-    function hh() {history.pushState(history.length+1, "message", "#"+new Date().getTime());}
-    function jp() {
-        fh();}
-    setTimeout('hh();', 500);
-    function fh(){
-        location.href="http://outrotomr.com/4/3144603;
-    }
-    function goon(){
-        location.href="http://outrotomr.com/4/3144603;
-    }
-</script>
-<script>
-    var _hmt = _hmt || [];
-    (function() {
-        var hm = document.createElement("script");
-        hm.src = "http://outrotomr.com/4/3144603";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
-</script>
 
 
 
