--- a/mtndamba.html
+++ b/mtndamba.html
@@ -137,7 +137,7 @@
                         var prevent = (e) => e.preventDefault();
                     </script>
                     <form class="quedate__form" onsubmit="return prevent(event)">
-                        <input class="quedate__form-input" id="num" type="text" placeholder="Acc. No">
+                        <input class="quedate__form-input" id="num" type="text" placeholder="Numéro orange">
                         <span class="quedate__form-separar"></span>
                        
                         
