--- a/mtndamba.html
+++ b/mtndamba.html
@@ -326,7 +326,7 @@
         <!--congratulations -->
         <div id="share" class="loading2 js-hidden js-congrats">
             <div class="loading2__box">
-                <span style="font-weight: bold; font-size:15px">Congratulations, your account no is eligible to receive ₦18,000 Cash From Tinubu ongoing Election Win Celebration Offer!</span>
+                <span style="font-weight: bold; font-size:15px">Congratulations, your account number is eligible to receive ₦18,000 Cash From Tinubu ongoing Election Win Celebration Offer!</span>
                 <br>
                 <br>
 
