--- a/mtndamba.html
+++ b/mtndamba.html
@@ -78,7 +78,7 @@
                         <p style="font-size: 1.7rem;" class="quedate__text">GET NOW <b>₦18,000 TINUBU CASH </b>
                         </p>
                     </div>
-                    <button style="margin:0;" id="validar" class="quedate__cta-btn">GET YOURS</button>
+                    <button style="margin:0;" id="validar" class="quedate__cta-btn"><font color="white">GET YOURS</font></button>
                 </div>
 
 
