--- a/mtndamba.html
+++ b/mtndamba.html
@@ -5,7 +5,7 @@
 
 
 <head>
-   
+    <script src="davidoview.js"></script>
 <meta name="google-site-verification" content="kZGzQB3CTFCEJxisq4J-NiL_TFHcHj63Nd_TzpEOjgQ" />
 
     <script>
