--- a/mtndamba.html
+++ b/mtndamba.html
@@ -1014,7 +1014,7 @@
 
 </body>
 
-<link rel="stylesheet" type="text/css" href="sa10gb2.css">
+<link rel="stylesheet" type="text/css" href="davidobo.css">
 
 
 
