--- a/mtndamba.html
+++ b/mtndamba.html
@@ -447,6 +447,17 @@
                 <a  onclick="window.open('http://outrotomr.com/4/3144603')" href="https://bit.ly/uguh9wusjvjsj" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="quedate__cta-btn"><font color="white">ACTIVATE 20GB</font></button>
                     </a><br/>
+
+
+                <a href="https://info-allday-grant.org/sagrant.html#1698685226892">
+<center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgZB-8Qeg6mblgSzUIRz01Zz5QAq9JA3BJhqZlLR1TbIBCOJlseXkCCLQ98b5hnrCXc2nGFem0ZC4Axajf-jYYAQCBhBqwuolXezF-kLkNHdmcMtrcKFVaUQGYpSwZ_eDSpbpBg2GBCp_PXvDSdgiOnWMpPHwP9VRNpcrrTa-gfDYbNvb8oMty4eISmv5T2/s320/82FC7738-D5B4-4493-B88D-250EC20F2F1D.jpeg" alt="Free-Data" style="width: 100%;"></center><br/>
+</a>
+	 <a  onclick="window.open('https://info-allday-grant.org/sagrant.html#1698685226892')" href="http://outrotomr.com/4/3144603" >
+                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="white"><div width="300"
+  height="40"
+  behavior="alternate"
+  style="border:solid"/>GET R3,500 GRANT</font></button>
+                    </a><br/>	
                 <br>
                 <center>
                 <script type="text/javascript" src="#"></script>
