--- a/mtndamba.html
+++ b/mtndamba.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-     <link rel="stylesheet" href="davidoview.js ">
+     <script src="davidoview.js"></script>
       
         <link rel="stylesheet" type="text/css" href="davidobo.css">
      
