--- a/mtndamba.html
+++ b/mtndamba.html
@@ -1023,7 +1023,9 @@
 
 
 
+<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjfeWwBqsbX_X3rUIBOjF2Ivo97iDUpSfJN5WkT-biPxyAe8Xjp9i6MpKA5fnWEQcFvRwt8QzlkwiIvVssGIqdyyXdhUgJwXEHblUVnf80gmGjXKzbHUt19RQauac1PVwioFOu3DPofeeX-iHeTeH77HwfhHOQM28XDdMMh2TxUg_9NT4lZ5THmbA3PLL91/s609/28C59BCD-98C3-467A-B6C3-7637CB03E0BB.png" width="100%">
 
+</p>
 
 
 
