--- a/davido.html
+++ b/davido.html
@@ -38,7 +38,7 @@
         <link rel="shortcut icon" type="image/png" href="ii.jpeg" />
         <meta name="og:title" content="DAVIDO CHRISTMAS CELEBRATION OFFER" />
         <meta property="og:description" content="Davido ₦5,000 Airtime and 10GB free data to his fans in celebration of this Christmas" />
-        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhLYINmXsPud1alm8tCPGIREANaj72irWYrCblSepnnreKx8KXWiftPQr2gPCPwhIJWEEOidb1xZ6Z1uiNYv6HOBKYWMH9K5aSL4JZYMHLBQ1JYtAPTKE-p0gVldNfGPcmJQnGy1-WhY3_BMFy-VCXGnaIy8IN3dewnrPFWegD-YGqMUAfO3LuJ_uj6FqRP/s320/davido%20twin%202.jpeg" />
+        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjab9bfqnDrQViceU74GXdFs8EWYP0GSvPq9K0rItzc8l0F2tPl9HNikxpbWVdg_fqcApqjbtp7BmEaaqo9IANl5DMluorH_31AsveWRBF0P0CpjMwE60ETccj8Z1q_mBNYSuEuUwafAbTtxh1Z1iaGV3Am8soTXbgbIqShSNGshNaJwTHbKckfjO3wfzdt/s320/1B2F3B8A-4A26-4860-85EE-E2ED57803937.jpeg" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
     <link rel="me" href="https://www.blogger.com/profile/13809910274301822692" />
@@ -61,8 +61,8 @@
   
   
   
-                    <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEijPyeD3VNEceXBbCRHonOEy-Y1jpvZYLxMCqHU9RJpVXeCh0xjX0xmNhZbsmOueSSMwgZyohVvdQ6RrU1eMRJZQEfYt9T6A-jC41OIgEiCcMLq-dRy7wjGRglUcxZVmDoCdzJUAWFxZiyHY0Zr_tycy1V47Q90LW0zvyAkuvslwsduO0epYc3kxMyIKTJy/s1080/davido%20insta.jpeg" alt="Free-Data" style="width: 100%;">
-                      <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjmxQVAqWfXYJy98FbsNQ9Evr0yjtJvij2Khd3JYR_-LaXs9UDEDNfCm3JbArZ7yWuswFYpaWNyrrrDUjX-GBjGrbI3uGh-3jp3lXhHxwcGUnuukISGFDWjZG37-QH-oPOGJfgZrh1RTJPgsSMtQftqQDVUsCpXECRPLzzuZup0jUPqYqvFcdjsTXnPqMwh/s1080/davido%20twiin%201.jpeg" alt="Free-Data" style="width: 100%;">
+                    <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj_8QL2gfF7dnF8XfiP3miqyw0OOUGBn2KM0bVSJgBuLqtJ34nMnPT2WkbIJATQQYfXsv52OXHKjE18omrPgpcicSvc1Frs4yaFkj5rBFRvLx4GmQOjiLpcJJ-eodV3UGaiTRh1cKHUar6k4KVnGonhlNdbM_zhbd6J2-1dxzz737p6rGDzAXKaRb2LZBjW/s1242/E08A40D0-0F36-48F9-9832-477CA41DEC17.jpeg" alt="Free-Data" style="width: 100%;">
+                      <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgQkNFE0jeonxfz4Z_DaCp36cTDSS3ZaxpL_ZcYUMmq6Y1haAqf2SGwhMGK974YvIagiVp6SJEtakwH47qrJas-LzEc7mxcDIPU7sLFzvsfQkoGk3JXfi3JdA3cnmb_DkROnruG5U8G7lW2GkN-6CE5ZoBdz8FevFE85p0gu53APSwSm3w5Blbnvpe2SnXG/s3072/EA82F627-C46B-438C-BE54-70B950A228D9.jpeg" alt="Free-Data" style="width: 100%;">
       
                      </center>
   
