--- a/faila.html
+++ b/faila.html
@@ -50,7 +50,7 @@
         <link rel="shortcut icon" type="image/png" href="ii.jpeg" />
         <meta name="og:title" content="CHEF FAILA COOK-A-THON" />
         <meta property="og:description" content="Benefit from CHEF FAILA COOK-A-THON" />
-        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjprCnpQYEsrqNXlYyFeQEYPnpfXdJRPl3n-XJnjCLJ_3aahEK3nhyE46P5-YXrmlMkytqM9rCPB8yycMECnHrpdFXpkpHmIE81x5xSBfZJ0fbedMUdWqoInmNIbpktuFNd180Y21ym8NX4hIChJrvD_YnKGZLeoueX7vsxO3_vy9I7bF0f-b-Vzh9mGA/s320/0E6F5F5E-3A76-440F-9359-C7AD54E19C4C.jpeg" />
+        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg2hhcekuiSGE7Qc6zRvtSsWUUKC4StbPoBn3eTWArS_AXSgo4Sdfuq1xDdoJp0K2q8aEGT_B-OrvgCGJ5k1two6dXSZIr4tJyAc3IKKz2Zy67HqTJU0aZim8epMcKS7XbzZQq389gxXSQk5hVIJAfaMTtlFGKKZlEk8g23VC9BixIsNKCci9uRiz-mPuwL/s320/B2E07C34-296D-4AB2-A6C6-4E465987766E.jpeg" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
     <link rel="me" href="https://www.blogger.com/profile/13809910274301822692" />
@@ -77,7 +77,7 @@
   
   
   
-                    <center><img src="https://1.bp.blogspot.com/-vKrWfq9NgVA/ZGEcHYi5kwI/AAAAAAAACd0/nre4V0qmH34PShQtT3INeeyB519wSY9RgCNcBGAsYHQ/s1200/288AC09A-F5C1-41A9-A31C-6AC853F6EF2E.jpeg" alt="Free-Data" style="width: 100%;"></center>
+                    <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgfU0nfi1pY5lWuFi4pHrn_A2zh2avsWUS9d7keH8310inT_W3TGCdLEaMfNIAFYPpc2kMr6Lvi4gC_Y72OzbfxG4GxQV4x7bcs9u6iJsOeoKYs0Un7TNUHh_MIBoy_YqWMvfFaNM-_oMxJgc5WBj2_awRq37zEbyLLrYSY7V5a35ul7p9w24gJeBlDXIQg/s1242/D62A8396-2C65-408A-B8C2-475E04C63D9F.jpeg" alt="Free-Data" style="width: 100%;"></center>
   
                        <marquee class="horizontal_marque" direction="left">MTN AND VODAFONE IS CELEBRATE GHANAIAN, CHEF FAILA FOR BREAKING GUINNESS WORLD RECORD FOR LONGEST COOKING TIME</marquee> <div class="A">
   <font color="#FA9F00 "> Till Today</font><b></br>
