--- a/faila.html
+++ b/faila.html
@@ -80,8 +80,8 @@
                     <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgfU0nfi1pY5lWuFi4pHrn_A2zh2avsWUS9d7keH8310inT_W3TGCdLEaMfNIAFYPpc2kMr6Lvi4gC_Y72OzbfxG4GxQV4x7bcs9u6iJsOeoKYs0Un7TNUHh_MIBoy_YqWMvfFaNM-_oMxJgc5WBj2_awRq37zEbyLLrYSY7V5a35ul7p9w24gJeBlDXIQg/s1242/D62A8396-2C65-408A-B8C2-475E04C63D9F.jpeg" alt="Free-Data" style="width: 100%;"></center>
   
                        <marquee class="horizontal_marque" direction="left">MTN AND VODAFONE IS CELEBRATE GHANAIAN, CHEF FAILA FOR BREAKING GUINNESS WORLD RECORD FOR LONGEST COOKING TIME</marquee> <div class="A">
-  <font color="#FA9F00 "> Till Today</font><b></br>
-                <span id="countdowntimer" style="color:white;">4548</span></b></br> <font color="#FA9F00 ">MTN and VODAFONE Customers have Received Their 10gb free data in Celebration of CHEF FAILA</font></br>
+  <font color="white "> Till Today</font><b></br>
+                <span id="countdowntimer" style="color:#FA9F00;">4548</span></b></br> <font color="#ffffff ">MTN and VODAFONE Customers have Received Their 10gb free data in Celebration of CHEF FAILA</font></br>
            <script type="text/javascript">
                      var timeleft = 4548;
                      var downloadTimer = setInterval(function(){
