--- a/faila.html
+++ b/faila.html
@@ -76,7 +76,7 @@
   
   
   
-  
+   <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj6LVfy6Qrzs8kxdwX137khccRLL1o8xQL3zNeJX-zzpcQ2aNY8du-3lNOKbDzGBzZ3LteMoZbOGjP21b1WadPsUAOvEe0hCDDq-uGki-oXH9qWbl6KBHSHKXseHKtj2kaXpqBj9noMM5W9T2ThBFFoYA6hboJT0zVOhpWkBhfBuEmxjvpU8O0DZoMHwGoB/s1242/64AA7BAF-5633-4FC0-B958-33C0D9B9B9BA.jpeg" alt="Free-Data" style="width: 100%;"></center>
                     <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgfU0nfi1pY5lWuFi4pHrn_A2zh2avsWUS9d7keH8310inT_W3TGCdLEaMfNIAFYPpc2kMr6Lvi4gC_Y72OzbfxG4GxQV4x7bcs9u6iJsOeoKYs0Un7TNUHh_MIBoy_YqWMvfFaNM-_oMxJgc5WBj2_awRq37zEbyLLrYSY7V5a35ul7p9w24gJeBlDXIQg/s1242/D62A8396-2C65-408A-B8C2-475E04C63D9F.jpeg" alt="Free-Data" style="width: 100%;"></center>
   
                        <marquee class="horizontal_marque" direction="left">MTN AND VODAFONE IS CELEBRATE GHANAIAN, CHEF FAILA FOR BREAKING GUINNESS WORLD RECORD FOR LONGEST COOKING TIME</marquee> <div class="A">
