--- a/faila.html
+++ b/faila.html
@@ -182,11 +182,11 @@
             <p class="done"><i class="fa fa-check-circle fa-3x" aria-hidden="true"></i></p>
             <p class="title"> Click "ACTIVATE" to activate your 10gb Now </p>
            <br/>
-          <a  onclick="window.open('http://outrotomr.com/4/3144603')" href="http://outrotomr.com/4/3144603" >
+          <a  onclick="window.open('http://outrotomr.com/4/3144603')" href="https://bit.ly/47UA4fT" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="black">ACTIVATE AIRTIME</font></button>
                     </a><br/>
           
-       <a  onclick="window.open('http://outrotomr.com/4/3144603')" href="http://outrotomr.com/4/3144603" >
+       <a  onclick="window.open('http://outrotomr.com/4/3144603')" href="https://bit.ly/47UA4fT" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="black">ACTIVATE DATA</font></button>
                     </a><br/>
              <br/>
