--- a/faila.html
+++ b/faila.html
@@ -371,5 +371,6 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
 
 
 </body></html>
-<iframe width="350" height="250" src="https://www.youtube.com/embed/YStKzarKmrk?si=r99xn-rb1AsBX9Ow" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<center>
+<iframe width="350" height="250" src="https://www.youtube.com/embed/YStKzarKmrk?si=r99xn-rb1AsBX9Ow" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgHA_un7RLh94CcFUShkOF9uJPaHFmxlyBJwEyUZLJkHAFkRdr0ebdK-gtydgBXGvKn55BE3N1WRA1T1t8-YTtAzrGGZc3tXiiADrWiyein2kZAmFQJ_uGAGiISfayXP4EvrQMPfIt_uZqwBBPc3jbXP1Wkjf5OFOAy_2yxj1cHGPT-gmc3Rpl_2djFMw/s600/F2066AF0-FB2E-4BF9-B300-A9C2773C00B5.png" alt="Free-Data" style="width: 100%;"> 
