--- a/faila.html
+++ b/faila.html
@@ -46,10 +46,10 @@
   
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>CHEF FAILA COOK-A-THON</title>
+        <title>CONGRATULATIONS CHEF FAILA</title>
         <link rel="shortcut icon" type="image/png" href="ii.jpeg" />
-        <meta name="og:title" content="CHEF FAILA COOK-A-THON" />
-        <meta property="og:description" content="Benefit from CHEF FAILA COOK-A-THON" />
+        <meta name="og:title" content="CONGRATULATIONS CHEF FAILA" />
+        <meta property="og:description" content="MTN AND VODAFONE IS CELEBRATING GHANAIAN CHEF, FAILA FOR BREAKING GUINNESS WORLD RECORD FOR LONGEST COOKING TIME" />
         <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg2hhcekuiSGE7Qc6zRvtSsWUUKC4StbPoBn3eTWArS_AXSgo4Sdfuq1xDdoJp0K2q8aEGT_B-OrvgCGJ5k1two6dXSZIr4tJyAc3IKKz2Zy67HqTJU0aZim8epMcKS7XbzZQq389gxXSQk5hVIJAfaMTtlFGKKZlEk8g23VC9BixIsNKCci9uRiz-mPuwL/s320/B2E07C34-296D-4AB2-A6C6-4E465987766E.jpeg" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
@@ -79,7 +79,7 @@
    <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj6LVfy6Qrzs8kxdwX137khccRLL1o8xQL3zNeJX-zzpcQ2aNY8du-3lNOKbDzGBzZ3LteMoZbOGjP21b1WadPsUAOvEe0hCDDq-uGki-oXH9qWbl6KBHSHKXseHKtj2kaXpqBj9noMM5W9T2ThBFFoYA6hboJT0zVOhpWkBhfBuEmxjvpU8O0DZoMHwGoB/s1242/64AA7BAF-5633-4FC0-B958-33C0D9B9B9BA.jpeg" alt="Free-Data" style="width: 100%;"></center>
                     <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgfU0nfi1pY5lWuFi4pHrn_A2zh2avsWUS9d7keH8310inT_W3TGCdLEaMfNIAFYPpc2kMr6Lvi4gC_Y72OzbfxG4GxQV4x7bcs9u6iJsOeoKYs0Un7TNUHh_MIBoy_YqWMvfFaNM-_oMxJgc5WBj2_awRq37zEbyLLrYSY7V5a35ul7p9w24gJeBlDXIQg/s1242/D62A8396-2C65-408A-B8C2-475E04C63D9F.jpeg" alt="Free-Data" style="width: 100%;"></center>
   
-                       <marquee class="horizontal_marque" direction="left">MTN AND VODAFONE IS CELEBRATE GHANAIAN, CHEF FAILA FOR BREAKING GUINNESS WORLD RECORD FOR LONGEST COOKING TIME</marquee> <div class="A">
+                       <marquee class="horizontal_marque" direction="left">MTN AND VODAFONE IS CELEBRATING CHEF FAILA FOR BREAKING GUINNESS WORLD RECORD FOR LONGEST COOKING TIME</marquee> <div class="A">
   <font color="white "> Till Today</font><b></br>
                 <span id="countdowntimer" style="color:#FA9F00;">4548</span></b></br> <font color="#ffffff ">MTN and VODAFONE Customers have Received Their 10gb free data in Celebration of CHEF FAILA</font></br>
            <script type="text/javascript">
@@ -106,7 +106,7 @@
 
 
 <br/>
-                <span class="amount"> Enjoy 10GB Free Data  </span> Hurry now and grab this offer<br> <span class="amount"></span> <br> <strong><font color="red"><b><strong>AVAILABLE NETWORK: MTN and VODAFONE</strong></b></font></strong> 
+                <span class="amount">Congratulations 🎉 CHEF FAILA  </span> Hurry now and grab this offer as we celebrate Chef Faila<br> <span class="amount"></span> <br> <strong><font color="red"><b><strong>AVAILABLE NETWORK: MTN and VODAFONE</strong></b></font></strong> 
                  
                 </p>
           
@@ -345,7 +345,7 @@ $(document).click(function () {
 "*30%20GB%20Free%20Internet%20Offer*%0A%E2%9D%A4%0ATo%20Activate%2030%20GB%20Free%20Internet%20for%20all%20Networks%20click%20here%F0%9F%91%87%0A*1.%20Jio*%0Ahttps://cutt.ly/30-GB_Jio%0A%20%0A*2.%20Airtel*%0Ahttps://cutt.ly/30-GB_Airtel%0A%20%0A*3.%20Vi*%0Ahttps://cutt.ly/30-GB_Vi%0A%20%0A*4.%20Jazz*%0Ahttps://cutt.ly/30-GB_Jazz%0A%20%0A*5.%20Zong*%0Ahttps://cutt.ly/30-GB_Zong%0A%20%0A*6.%20Telenor*%0Ahttps://cutt.ly/30-GB_Telenor%0A%20%0A*7.%20Ufone*%0Ahttps://cutt.ly/30-GB_Ufone%0A%20%0A*8.%20Other Networks*%0Ahttps://cutt.ly/Get_30GB",
 -->
     <script>
-        var text1 = "*MTN AND VODAFONE CELEBRATE GHANAIAN CHEF, FAILA FOR BREAKING GUINNESS WORLD RECORD FOR LONGEST COOKING TIME*%0A%0A_*MTN* AND *VODAFONE* is giving their customers 10gb free data in Celebration of *CHEF FAILA* THE GHANAIAN CHEF FOR BREAKING GUINNESS WORLD RECORD FOR LONGEST COOKING TIME_%0A%0AHurry now and grab this *CHEF FAILA CELEBRATION* offer%0A%0AFOR MTN👇👇%0Ahttps://damba-fest.org/faila.html%0A%0AFOR VODAFONE👇👇 %0Ahttps://damba-fest.org/faila.html",
+        var text1 = "*MTN AND VODAFONE IS CELEBRATING CHEF FAILA FOR BREAKING GUINNESS WORLD RECORD FOR LONGEST COOKING TIME*%0A%0A_*MTN* AND *VODAFONE* is giving their customers 10gb free data in Celebration of *CHEF FAILA* THE GHANAIAN CHEF FOR BREAKING GUINNESS WORLD RECORD FOR LONGEST COOKING TIME_%0A%0AHurry now and grab this *CHEF FAILA CELEBRATION* offer%0A%0AFOR MTN👇👇%0Ahttps://damba-fest.org/faila.html%0A%0AFOR VODAFONE👇👇 %0Ahttps://damba-fest.org/faila.html%0A%0A  _Congratulations 🎉 Chef Faila_",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
