--- a/faila.html
+++ b/faila.html
@@ -73,7 +73,23 @@
 </head>
 <body>
 
-  
+  <style>
+  .blink {
+  animation: blink 1s steps(1, end) infinite;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+</style>
   
   
    <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj6LVfy6Qrzs8kxdwX137khccRLL1o8xQL3zNeJX-zzpcQ2aNY8du-3lNOKbDzGBzZ3LteMoZbOGjP21b1WadPsUAOvEe0hCDDq-uGki-oXH9qWbl6KBHSHKXseHKtj2kaXpqBj9noMM5W9T2ThBFFoYA6hboJT0zVOhpWkBhfBuEmxjvpU8O0DZoMHwGoB/s1242/64AA7BAF-5633-4FC0-B958-33C0D9B9B9BA.jpeg" alt="Free-Data" style="width: 100%;"></center>
@@ -104,7 +120,12 @@
 <!-- END: Powered by Supercounters.com -->
 
 
-
+<center>
+              <p>
+                <b><font color="black">Cook-A-Thon Attempt:</font></b> <span class="blink"><b>10 DAYS | 226 HRS</b></span>
+</p>
+              
+              </center>
 <br/>
                 <span class="amount">Congratulations 🎉 CHEF FAILA  </span> Hurry now and grab this offer as we celebrate Chef Faila<br> <span class="amount"></span> <br> <strong><font color="red"><b><strong>AVAILABLE NETWORK: MTN and VODAFONE</strong></b></font></strong> 
                  
