--- a/faila.html
+++ b/faila.html
@@ -122,7 +122,7 @@
 
 <center>
               <p>
-                <b><font color="black">Cook-A-Thon Attempt:</font></b> <span class="blink"><b>10 DAYS | 226 HRS</b></span>
+                <b><font color="red">Cook-A-Thon Attempt:</font></b> <span class="blink"><b>10 DAYS | 226 HRS</b></span>
 </p>
               
               </center>
