--- a/faila.html
+++ b/faila.html
@@ -101,7 +101,7 @@
 
 			       <center>
               <p>
-                <b><font color="#FA9F00">Cook-A-Thon Attempt:</font></b> <span class="blink"><b>10 DAYS | 226 HRS</b></span>
+                <b><font color="#FA9F00">Cook-A-Thon Attempt:</font></b> <span class="blink"><b><font color="white">10 DAYS | 226 HRS</font></b></span>
 </p>
               
               </center>
