--- a/faila.html
+++ b/faila.html
@@ -134,7 +134,7 @@
                 </p>
           
                
-            <button id="go">GET DATA/AIRTIME ➤</button>
+            <button id="go">GET YOURS ➤</button>
         </div>
         <div id="loader">
             <div>Please Wait ...</div>
