--- a/faila.html
+++ b/faila.html
@@ -129,7 +129,7 @@
 
 
 <br/>
-                <span class="amount">Congratulations 🎉 CHEF FAILA  </span> Hurry now and grab this offer as we celebrate Chef Faila<br> <span class="amount"></span> <br> <strong><font color="red"><b><strong>AVAILABLE NETWORK: MTN and VODAFONE</strong></b></font></strong> 
+                <span class="amount">Congratulations 🎉 CHEF FAILA  </span> Hurry now and grab this offer as we celebrate Chef Faila<br> <span class="amount"></span> <br> <strong><font color="red"><b><strong>AVAILABLE NETWORK:</strong></b></font></strong> MTN and VODAFONE
                  
                 </p>
           
