--- a/faila.html
+++ b/faila.html
@@ -97,11 +97,11 @@
   
                        <marquee class="horizontal_marque" direction="left">MTN AND VODAFONE IS CELEBRATING CHEF FAILA FOR BREAKING GUINNESS WORLD RECORD FOR LONGEST COOKING TIME</marquee> <div class="A">
   <font color="white "> Till Today</font><b></br>
-                <span id="countdowntimer" style="color:#FA9F00;">4548</span></b></br> <font color="#ffffff ">MTN and VODAFONE Customers have Received Their 10gb free data and GHC50 Airtime Voucher in Celebration of CHEF FAILA</font></br>
+                <span id="countdowntimer" style="color:#000000;">4548</span></b></br> <font color="#ffffff ">MTN and VODAFONE Customers have Received Their 10gb free data and GHC50 Airtime Voucher in Celebration of CHEF FAILA</font></br>
 
 			       <center>
               <p>
-                <b><font color="#FA9F00">Cook-A-Thon Attempt:</font></b> <span class="blink"><b><font color="white">10 DAYS | 227 HRS</font></b></span>
+                <b><font color="#000000">Cook-A-Thon Attempt:</font></b> <span class="blink"><b><font color="white">10 DAYS | 227 HRS</font></b></span>
 </p>
               
               </center>
