--- a/mtndamba.html
+++ b/mtndamba.html
@@ -3,7 +3,7 @@
 <html>
     <head>
 
-<link rel="stylesheet" type="text/css" href="davidobo.css">
+<link rel="stylesheet" type="text/css" href="christmas1.css">
     <script src="alladz.js"></script>
 
 
