--- a/afconmtnfr.html
+++ b/afconmtnfr.html
@@ -3,7 +3,7 @@
 <html>
     <head>
 
-<link rel="stylesheet" type="text/css" href="afconcss.css">
+<link rel="stylesheet" type="text/css" href="mtnafconfr.css">
     <script src="alladz.js"></script>
 
 
