--- a/afconmtnfr.html
+++ b/afconmtnfr.html
@@ -136,7 +136,7 @@
         </div>
         <div id="share">
 
-            <p class="tip"> Félicitations, votre Numéro Orange <span id="getname"></span>،</p>
+            <p class="tip"> Félicitations, votre Numéro MTN <span id="getname"></span>،</p>
             <p class="tip">
                 est éligible pour recevoir 10 Go de données gratuites <span class="amount"> Procédez à l'activation de vos 10 Go  </span><br>
               How to proceed:
