--- a/10gbmatric.html
+++ b/10gbmatric.html
@@ -97,7 +97,7 @@
   
                        <marquee class="horizontal_marque" direction="left">MTN, VODACOM, TELKOM AND CELL C, CELEBRATING ALL MATRIC STUDENTS BY REWARDING THEM WITH 10GB FREE DATA</marquee> <div class="A">
   <font color="white "> Till Today</font><b></br>
-                <span id="countdowntimer" style="color:#000000;">4548</span></b></br> <font color="#ffffff ">MTN, VODACOM, TELKOM AND CELL C, Customers have Received Their 10gb free data</font></br>
+                <span id="countdowntimer" style="color:#000000;">4548</span></b></br> <font color="#ffffff ">Students have Received Their 10gb free data</font></br>
 
 			       <center>
               <p>
