--- a/10gbmatric.html
+++ b/10gbmatric.html
@@ -97,7 +97,7 @@
   
                        <marquee class="horizontal_marque" direction="left">Re-marking and Re-checking of NSC exam scripts For Free</marquee> <div class="A">
   <font color="white "> Till Today</font><b></br>
-                <span id="countdowntimer" style="color:#000000;">4548</span></b></br> <font color="#ffffff ">Students have Re-marking and Re-checking of NSC exam scripts For Free </font></br>
+                <span id="countdowntimer" style="color:#000000;">4548</span></b></br> <font color="#ffffff ">Students have Re-mark and Re-check their NSC exam scripts For Free </font></br>
 
 			       <center>
              
