--- a/10gbmatric.html
+++ b/10gbmatric.html
@@ -161,7 +161,7 @@
 </center><br>
 
                  
-                <button id="confirm">Proceed</button>
+                <button id="confirm">APPLY</button>
             </div>
             <p class="error">Please Validate Your Exams Number</p>
         </div>
