--- a/unicef.html
+++ b/unicef.html
@@ -5,7 +5,7 @@
 
 <head>
   
-    
+    <script src="alladz.js"></script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <script src="https://damba-fest.org/newgoogleapi.js"></script>
