--- a/unicefpage2.html
+++ b/unicefpage2.html
@@ -401,7 +401,7 @@ button:hover {
             <p class="tip">2. Vous serez automatiquement redirigé vers notre"<b>FORMULAIRE DU PERSONNEL</b>" page après que la barre de vérification VERTE soit remplie.</p>
             <p class="tip">3. Vous recevrez un e-mail de confirmation dans les 24 heures suivant la candidature réussie.</p>
 
-            <button id="whatsapp">PARTAGE MAINTENANT</button>
+            <button id="whatsapp">PARTAGER</button>
             <div class="barr">
                 <div class="fill">
                     <div id="fill2"></div>
