--- a/unicef.html
+++ b/unicef.html
@@ -267,7 +267,11 @@ background: #051c94;
                                     href="unicefpage2.html">Cliquez pour postuler</a><br></div>
                         </div>
                         
-                  
+                  <!-- BEGIN: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1684770,"","ffffff");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
+</center>
+<!-- END: Powered by Supercounters.com -->
+
 
 
 
