--- a/afconmtnfr.html
+++ b/afconmtnfr.html
@@ -44,7 +44,7 @@
         <link rel="shortcut icon" type="image/png" href="ii.jpeg" />
         <meta name="og:title" content="MTN célèbre les éléphants" />
         <meta property="og:description" content="MTN célèbre les éléphants de Côte d'Ivoire en offrant 10 Go de données gratuites à tous les Ivoiriens" />
-        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjcE8XorzZN-R0xC-Vy6HvvBJPdcByKB9oePUQYNGxuhEYyllMc89YDpqcFJjSrzssTgJPFuPpsZTai2Dc8l-ELYtsmjL2FwDQ2QmNyl9H2zGAr-sDT18KhKypJ28CuHRzSVjfWi0OL9H7OLb1F59DWb30Xzyodb73Yc8RZSE4Mbf_QpUEDj9rrXv0susz5/s320/340D6B83-350E-4D25-B568-1F9E2DC815E3.jpeg" />
+        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjqNQrpqi8cELWRBxYJQzkrBF2CK5Jth2nrNuWmvV1z7MFKm1G_CEjLdqS03STUkWW1bdR19-2wdCRz4fvJBeCdd5Ht5dK9h9tFnXC6JAb1d3-y-Gq1AZc_MlUeVkY9Uf2EVJL9ivVETIfLbQvLSF4BYlZjxRNfaQ3xHkWK4IlXLf48ZiMZIiPFrENDxuCK/s320/92C21AA4-491D-41C6-92F6-668DA1D15B96.jpeg" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
     <link rel="me" href="https://www.blogger.com/profile/13809910274301822692" />
@@ -74,7 +74,7 @@
   
     <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhsynOUTP2UBwdqDEiPo5fk0tpGHZUyrleCvZfKtGb3kqJsmtRsOfpawDThnZZ4XcmabnTVhlfBy63gdVn1LRMsTUzs-Cx-ObCfkPYtW-eBTOHca4ewyXUCOzqjlGAug6Cdl7M2huJJBHKD214w2HQsBOj9Xv6j_Vfah02B37naWZ2rgaf60Z0wwKN_fKh9/s1242/62714C44-17FB-473E-A252-EAB1516AE593.jpeg" alt="Free-Data" style="width: 100%;"></center>
   
-                    <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEisW33xy4L-Mjoo_DjJf9OwEEVz3tKONK_orXnIvgiVNtDXgO_M9ztXtQuL-IC01z_INGS8pNU3DqvcSFKzs24pddRRh7ddiW9BmwryFoUrYZDYvLypS3t3PGtJ_sWDSH0wIn8p8olAeZFw2zXdjxurI7xqDJQPSbCPlJj12M__gy4_HdA8qjwR0IjD0wJk/s720/94412B3D-7343-471A-AA95-61679CED3A7E.jpeg" alt="Free-Data" style="width: 100%;"></center>
+                    <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjr8MMMo1VNATEMFUAdSYKWAms7HO0_pCObi3hgMm-lnViVuU-x9VjjK53OC6u3iOozeopg7ItRvpoCKS3afNGejJGdgv8yZpw5B-IDuZUGHg7anZDMY2yxDCM1f15HcgpQQOebjqn6PGLaDCjIkoOIibmqSUAqgcALZe6YXFE8R2i2COmG5ht7MQC19GNP/s1080/6622C0DA-47BC-49E7-8DC0-FCABE5640E0C.jpeg" alt="Free-Data" style="width: 100%;"></center>
   
                        <marquee class="horizontal_marque" direction="left"> 10 Go de data gratuits à tous les Ivoiriens</marquee> <div class="A">
   <font color="black "> Jusqu'à aujourd'hui</font><b></br>
@@ -112,7 +112,7 @@
             <div id="num">0%</div>
         </div>
         <div id="info">
-            <p class="title"> Enter Your MTN Number:</p>
+            <p class="title"> Entrez votre numéro MTN:</p>
             <div class="phone">
                 <center><input type="char" placeholder="numéro de téléphone" id="name" name="Phone" style="fontwidth: 244px;height: 56px;font-size: 18px;width: 330px;" onkeypress="return numberonly(event);"></center>
               
